add more images, hide modal functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
     <title>Douglas Excavation</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158060469-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-158060469-1');
+    </script>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -170,16 +180,16 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
+            <a>
+              <!-- class="portfolio-link"
               data-toggle="modal"
-              href="#portfolioModal1"
-            >
-              <div class="portfolio-hover">
+              href="#portfolioModal1" -->
+
+              <!-- <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-search fa-3x"></i>
                 </div>
-              </div>
+              </div> -->
               <img
                 class="img-fluid"
                 src="img/portfolio/trenching4-thumbnail.jpg"
@@ -192,16 +202,17 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
+            <!-- <a
               class="portfolio-link"
               data-toggle="modal"
               href="#portfolioModal2"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-search fa-3x"></i>
-                </div>
-              </div>
+            > -->
+            <a>
+              <!-- <div class="portfolio-hover"> -->
+                <!-- <div class="portfolio-hover-content"> -->
+                  <!-- <i class="fas fa-search fa-3x"></i> -->
+                <!-- </div> -->
+              <!-- </div> -->
               <img
                 class="img-fluid"
                 src="img/portfolio/foundations1-thumbnail.jpg"
@@ -214,16 +225,16 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
+            <a>
+              <!-- class="portfolio-link"
               data-toggle="modal"
-              href="#portfolioModal3"
-            >
-              <div class="portfolio-hover">
+              href="#portfolioModal3" -->
+
+              <!-- <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-search fa-3x"></i>
                 </div>
-              </div>
+              </div> -->
               <img
                 class="img-fluid"
                 src="img/portfolio/concrete1-thumbnail.jpg"
@@ -236,17 +247,17 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
+            <a>
+              <!-- class="portfolio-link"
               data-toggle="modal"
-              href="#portfolioModal4"
-            >
-              <div class="portfolio-hover">
+              href="#portfolioModal4" -->
+
+              <!-- <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-search fa-3x"></i>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/pond1.jpg" alt="" />
+              </div> -->
+              <img class="img-fluid" src="img/portfolio/pond2-thumbnail.jpg" alt="" />
             </a>
             <div class="portfolio-caption">
               <h4>Pond Repair and Excavation</h4>
@@ -254,44 +265,19 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
+            <a>
+              <!-- class="portfolio-link"
               data-toggle="modal"
-              href="#portfolioModal5"
-            >
-              <div class="portfolio-hover">
+              href="#portfolioModal6" -->
+
+              <!-- <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-search fa-3x"></i>
                 </div>
-              </div>
+              </div> -->
               <img
                 class="img-fluid"
-                src="img/portfolio/01-thumbnail.jpg"
-                alt=""
-              />
-            </a>
-            <div class="portfolio-caption">
-              <h4>Demolition</h4>
-              <p class="text-muted">
-                demolition of concrete slabs, foundations, buildings, grain
-                bins, and others
-              </p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
-              data-toggle="modal"
-              href="#portfolioModal6"
-            >
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-search fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="img/portfolio/cleanup1-thumbnail.jpg"
+                src="img/portfolio/sewer3-thumbnail.jpg"
                 alt=""
               />
             </a>
@@ -301,16 +287,16 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a
-              class="portfolio-link"
+            <a>
+              <!-- class="portfolio-link"
               data-toggle="modal"
-              href="#portfolioModal6"
-            >
-              <div class="portfolio-hover">
+              href="#portfolioModal6" -->
+
+              <!-- <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-search fa-3x"></i>
                 </div>
-              </div>
+              </div> -->
               <img
                 class="img-fluid"
                 src="img/portfolio/cleanup1-thumbnail.jpg"
@@ -459,11 +445,6 @@
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
-              <!-- <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li> -->
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
